Added content to html file

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<div>
-	<p> Hi my name is Paige, and I like to code. </p>
-</div>
+<!DOCTYPE html> 
+<html>
+
+	<head>
+    <meta charset="UTF-8">
+		<title>I LOVE CODING</title>
+	</head>
+
+	<body>
+		<h1>BOOYAH</h1>
+	</body>
+
+</html>
